updated the Compose File: now the container starts on localhost updated the config file: reverse proxy refers to the localhost updated the stop and update script, removed docker-compose stop|remove and replaced it with down

--- a/nextcloud.conf
+++ b/nextcloud.conf
@@ -1,5 +1,5 @@
 server {
-  server_name <your_server_name>;
+  server_name cloud.<your_server_name>;
 
   client_max_body_size 1000M;
 
@@ -13,7 +13,7 @@ server {
 
       add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";      
       add_header Front-End-Https on;
-      proxy_pass <your_server_name>:8081/;
+      proxy_pass 127.0.0.1:8081/;
   }
 
   location /.well-known/carddav {
