added redis and nextcloud network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
 version: '3.3'
+
+networks:
+  nextcloud_network:
+    external: false
+
 services:
   db:
-    image: mysql:5.7
+    image: mariadb
+    container_name: mariadb
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: Ins4neL0n6P4$swOrD_Pl34$e-cHanGeIt!!
@@ -10,23 +16,36 @@ services:
       MYSQL_PASSWORD: SecR37_My$QL--PA$$w0rD--cHanGeIt
     volumes:
       - ./data_db:/var/lib/mysql
+    networks:
+      - nextcloud_network
       
-  nextcloud:
+  app:
     image: nextcloud:latest
+    container_name: nextcloud
     depends_on:
       - db
     restart: always
     ports:
-      - 127.0.0.1:8081:80
+      - 0.0.0.0:8081:80
     environment:
       MYSQL_DATABASE: nextcloud
       MYSQL_USER: nextcloud
       MYSQL_PASSWORD: SecR37_My$QL--PA$$w0rD--cHanGeIt
       MYSQL_HOST: db:3306
+      REDIS_HOST: redis
     volumes:
       - ./data_nextcloud/apps:/var/www/html/custom_apps
       - ./data_nextcloud/config:/var/www/html/config
       - ./data_nextcloud/data:/var/www/html/data
       - ./data_nextcloud/themes:/var/www/html/themes
-
+    networks:
+      - nextcloud_network
   
+  redis:
+    image: redis:alpine
+    container_name: redis
+    volumes:
+      - /docker/nextcloud/redis:/data
+    networks:
+      - nextcloud_network
+    restart: unless-stopped
