--- a/nginx/nextcloud.conf
+++ b/nginx/nextcloud.conf
@@ -13,7 +13,7 @@ server {
 
       add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";      
       add_header Front-End-Https on;
-      proxy_pass 127.0.0.1:8081/;
+      proxy_pass http://127.0.0.1:8081/;
   }
 
   location /.well-known/carddav {
