--- a/nginx/nextcloud.conf
+++ b/nginx/nextcloud.conf
@@ -14,6 +14,8 @@ server {
       add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";      
       add_header Front-End-Https on;
       proxy_pass http://127.0.0.1:8081/;
+
+      #SSLCert
   }
 
   location /.well-known/carddav {
