install replaces server name(s) and sets redirects now

--- a/nginx/nextcloud.conf
+++ b/nginx/nextcloud.conf
@@ -1,5 +1,5 @@
 server {
-  server_name cloud.<your_server_name>;
+  server_name #SERVER_NAMES;
 
   client_max_body_size 1000M;
 
@@ -27,3 +27,5 @@ server {
   }
 
 }
+
+#SSLRedirect
