--- a/nginx/nextcloud.conf
+++ b/nginx/nextcloud.conf
@@ -1,31 +1,35 @@
 server {
-  server_name #SERVER_NAMES;
+    server_name __DOMAIN__;
 
-  client_max_body_size 1000M;
+    listen 443 ssl http2;
+    ssl_certificate     /etc/nginx/ssl/nextcloud.crt;
+    ssl_certificate_key /etc/nginx/ssl/nextcloud.key;
 
-  location / {
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-Host $host;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
-      proxy_set_header X-Forwarded-Server $host;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    client_max_body_size 1000M;
 
-      add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";      
-      add_header Front-End-Https on;
-      proxy_pass http://127.0.0.1:8081/;
-  }
+    location / {
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-  #SSLCert
+        proxy_pass http://127.0.0.1:8081/;
+    }
 
-  location /.well-known/carddav {
-      return 301 $scheme://$host/remote.php/dav/;
-  }
+    location = /.well-known/carddav {
+        return 301 /remote.php/dav/;
+    }
 
-  location /.well-known/caldav {
-      return 301 $scheme://$host/remote.php/dav/;
-  }
-
+    location = /.well-known/caldav {
+        return 301 /remote.php/dav/;
+    }
 }
 
-#SSLRedirect
+server {
+    server_name __DOMAIN__;
+    listen 80;
+    return 301 https://$host$request_uri;
+}
